# Notha-Agent

./: .replit  Dockerfile  pnpm-lock.yaml  pyproject.toml  replit.md
.agents/memory/: MEMORY.md  notha-agent-refactor.md  notha-arch-gaps.md  notha-architecture.md  notha-auth-user.md  notha-english-standardization.md  notha-financial-gaps-decisions.md  notha-financial-pivot-cleanup.md  notha-investor-matching.md  notha-listing-flow-bug.md  notha-openai-lazy.md  notha-p2p-atomicity.md
artifacts/api-server/.replit-artifact/: artifact.toml
artifacts/notha/: asaas.py  config.py  conversation.py  guardrail.py  guardrails.py  llm.py  main.py  phone_info.py  phone_timezone.py  pluggy.py  pluggy_flow.py  requirements.txt  system_prompt.txt  transcribe.py  whatsapp.py
artifacts/notha/.replit-artifact/: artifact.edit.toml
artifacts/notha/agent/: agent.py  context.py  prompt.py
artifacts/notha/agents/: __init__.py  auth_user.py  content_safety.py  conversation.py  (+6 more)
attached_assets/: NOTHA_SPEC_1781937428236.md  Pasted--Especifica-o-de-Implementa-o-Fluxo-de-Emiss-o-de-D-vid_1783562260027.txt  Pasted--Estrutura-de-Dados-Plataforma-de-Empr-stimos-e-Investi_1783350563905.txt  Pasted--NOTHA-Arquitetura-de-Agentes-Conversa-o-e-Trabalho-Doc_1782170604089.txt  Pasted-2026-06-21T03-00-05-324044422Z-err-File-app-main-py-lin_1782011619168.txt  Pasted-2026-06-22T02-56-25-502036715Z-err-File-usr-local-lib-p_1782097246741.txt  Pasted-2026-06-22T02-56-26-944846633Z-err-raise-exc-from-None-_1782097957172.txt  Pasted-2026-06-22T03-17-47-228524634Z-err-2026-06-22-03-17-44-_1782098521422.txt
(+91 files in other folders)
